# mlm

./: LICENSE  Readme.md  makebom.sh  notes.md
board/: board.kicad_pcb  board.kicad_sch  board.pro  board.sch  genkeepouts.py  makebom.sh  mlm.lib  sym-lib-table
board/mlm.pretty/: 0603.kicad_mod  0805.kicad_mod  1008.kicad_mod  97730306330R.kicad_mod  9774025243R.kicad_mod  ADA4528-2.kicad_mod  BIGTOUCHBUT.kicad_mod  BK-5067.kicad_mod  BLP2016SM-G.kicad_mod  CSS-1210TB.kicad_mod  DDC0006A.kicad_mod  DURISS2.kicad_mod  D_SOD-323F.kicad_mod  EFM32TG108_QFN24.kicad_mod  EVQ-Q2W02W.kicad_mod  KEYSTONE_4881.kicad_mod  KXT111.kicad_mod  LM101A.kicad_mod  LQM2H.kicad_mod  LTR303ALS01.kicad_mod  M20-7910542R.kicad_mod  MP3030.kicad_mod  PMZ950UPEL.kicad_mod  TL3700AF100QG.kicad_mod  TOUCHPAD.kicad_mod  TPS6126x.kicad_mod  TouchSlider-4_30x11mm.kicad_mod  TouchSlider-4_40x11mm.kicad_mod  TouchSlider-4_45x12mm.kicad_mod  VLF302510MT-4R7M.kicad_mod  dual0402.kicad_mod  threebridge.kicad_mod  (+1 more)
case/: case.f3d  case.py  case.stl  windowcalcs.md
case/fov/: pyproject.toml
case/fov/fov/: __init__.py
case/fov/tests/: test_fov.py
firmware/: .gdbinit  Makefile  Readme.md  batsense.c  batsense.h  button.c  button.h  capsense.c  capsense.h  config.h  const.h  dwt.h  efm32zg108f8.ld  init.c  init.h  iso.c  iso.h  leds.c  leds.h  macroutils.h  main.c  myemu.c  myemu.h  old.Makefile  pins.h  rtc.c  rtc.h  rtt.c  rtt.h  sensor.c  sensor.h  state.c  state.h  tempsensor.c  tempsensor.h  time.c  time.h  units.c  units.h  util.c  (+2 more)
ltspice/: Readme.md  uamp.asc
manual/: manual.md
(+21 files in other folders)
