[tool.poetry]
name = "fov"
version = "0.1.0"
description = ""
authors = ["Alex Drummond <a.d.drummond@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.3"
shapely = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
